--- a/CSS/5_competences/competences.css
+++ b/CSS/5_competences/competences.css
@@ -10,32 +10,65 @@ main div {
   flex-direction: column;
 }
 
-main div div {
+.flip-card {
+  background-color: transparent;
   width: 325px;
   height: 35vh;
-  background-color: rgba(211, 211, 211, 0.6);
-  border-radius: 5%;
   margin-top: 25px;
   margin-bottom: 25px;
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  background-color: rgba(211, 211, 211, 0.6);
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front {
+  height: 35vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-main img {
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+div.flip-card-front img {
   height: 20vh;
   border-radius: 100%;
   margin-top: 5%;
 }
 
-main img:hover {
-  transform: scale(1.2);
-  transition-duration: 0.4s;
-}
-
 .titreC {
+  width: 100%;
+  height: 25%;
+  background-color: rgba(211, 211, 211, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0;
   margin: 0;
-  height: 25%;
-  justify-content: center;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
 }
