--- a/CSS/5_competences/competences.css
+++ b/CSS/5_competences/competences.css
@@ -1,3 +1,4 @@
+/* Design et positionnement du main */
 main {
   display: flex;
   align-items: center;
@@ -5,11 +6,13 @@ main {
   height: 85%;
 }
 
+/* Positionnement en colonne */
 main div {
   display: flex;
   flex-direction: column;
 }
 
+/* Positionnement et taille de la carte*/
 .flip-card {
   background-color: transparent;
   width: 325px;
@@ -18,7 +21,7 @@ main div {
   margin-bottom: 25px;
 }
 
-/* This container is needed to position the front and back side */
+/* Position de l'avant et de l'arrière de la carte */
 .flip-card-inner {
   position: relative;
   background-color: rgba(211, 211, 211, 0.6);
@@ -30,11 +33,12 @@ main div {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
+/* Retourne la carte quand la souris passe dessus */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
 
+/* Design de l'avant de la carte */
 .flip-card-front {
   height: 35vh;
   display: flex;
@@ -42,23 +46,15 @@ main div {
   justify-content: space-between;
 }
 
-/* Position the front and back side */
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
-
+/* Design de l'image dans la carte */
 div.flip-card-front img {
   height: 20vh;
   border-radius: 100%;
   margin-top: 5%;
 }
 
-.titreC {
+/* Design du titre de la compétence */
+.titreCompetence {
   width: 100%;
   height: 25%;
   background-color: rgba(211, 211, 211, 0.6);
@@ -69,6 +65,17 @@ div.flip-card-front img {
   margin: 0;
 }
 
+/* Positionnement de l'avant et de l'arrière de la carte */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Effet de rotation */
 .flip-card-back {
   transform: rotateY(180deg);
 }
