--- a/CSS/5_competences/competences.css
+++ b/CSS/5_competences/competences.css
@@ -79,3 +79,13 @@ div.flip-card-front img {
 .flip-card-back {
   transform: rotateY(180deg);
 }
+
+ul {
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
